Update some stuff